--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,7 @@
   ],
   "action": {
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "128": "lean128.png"
     },
     "default_title": "Maak Lean Window"
   },
